--- a/HexGridGeneration.ipynb
+++ b/HexGridGeneration.ipynb
@@ -2,23 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from koebe.algorithms.incrementalConvexHull import randomConvexHullE3\n",
-    "from koebe.algorithms.tutteEmbeddings import tutteEmbeddingE2\n",
-    "from koebe.geometries.euclidean2 import PointE2, SegmentE2\n",
+    "from koebe.geometries.euclidean2 import *\n",
+    "from koebe.geometries.euclidean3 import *\n",
     "\n",
-    "poly = randomConvexHullE3(200)\n",
-    "poly.outerFace = poly.verts[0].remove()\n",
+    "from koebe.algorithms.delaunay import delaunay\n",
     "\n",
-    "tutteGraph = tutteEmbeddingE2(poly)"
+    "from koebe.graphics.euclidean2viewer import E2Viewer, makeStyle\n",
+    "\n",
+    "import math, random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def squarePointGrid(n):\n",
+    "    return [PointE2(2 * i / n - 1, 2 * j / n - 1) for i in range(n) for j in range(n)]\n",
+    "\n",
+    "def hexPointGrid(n):\n",
+    "    return [PointE2((2 * i + (j % 2)) / n - 1, 2 * j * math.sqrt(0.75) / n - 1) for i in range(n) for j in range(n)]\n",
+    "\n",
+    "def liftPointE2toE3(p):\n",
+    "    return PointE3(p.x + 0.0001*(random.random() - 0.5), p.y + 0.0001*(random.random() - 0.5), p.x*p.x + p.y*p.y)\n",
+    "\n",
+    "def hexLattice(n):\n",
+    "    return delaunay(hexPointGrid(n))\n",
+    "    \n",
+    "polygon = PolygonE2([\n",
+    "    PointE2(-0.65, -0.81),\n",
+    "    PointE2( 0.48, -0.85), \n",
+    "    PointE2( 0.32,  0.02), \n",
+    "    PointE2( 0.52,  0.34), \n",
+    "    PointE2( 0.20,  0.58), \n",
+    "    PointE2(-0.25,  0.14), \n",
+    "    PointE2(-0.46, -0.48)\n",
+    "])\n",
+    "\n",
+    "polygonSegs = polygon.segments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -254,12 +285,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab224ad446e34e84aca07575c61496f5",
+       "model_id": "b950900eb3364792b3ee55ef33371ced",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "E2Sketch(height=500, objects='[{\"type\": \"SegmentE2\", \"endpoints\": [[-0.2825769158264676, 0.293680201674093], […"
+       "E2Sketch(height=600, objects='[{\"type\": \"SegmentE2\", \"endpoints\": [[0.94, 0.6974097914174997], [0.96, 0.662768…"
       ]
      },
      "metadata": {},
@@ -267,20 +298,44 @@
     }
    ],
    "source": [
-    "from koebe.graphics.euclidean2viewer import UnitScaleE2Sketch, makeStyle\n",
-    "viewer = UnitScaleE2Sketch()\n",
-    "#viewer.addAll([v.data for v in poly.verts])\n",
-    "segments = [SegmentE2(e.aDart.origin.data, e.aDart.twin.origin.data) for e in tutteGraph.edges]\n",
-    "viewer.addAll(segments)\n",
+    "viewer = E2Viewer(600, 600, 2.1/600)\n",
     "\n",
-    "points = [v.data for v in tutteGraph.verts]\n",
-    "#viewer.addAll(points)\n",
+    "n = 50\n",
+    "gridSize = 2 / n\n",
     "\n",
-    "# for point in points:\n",
-    "#     viewer.setStyle(point, makeStyle(fill=\"#f00\"))\n",
+    "lattice = delaunay(hexPointGrid(n))\n",
     "\n",
-    "for seg in segments:\n",
-    "    viewer.setStyle(seg, makeStyle(stroke=\"#000\", strokeWeight=0.5))\n",
+    "#lattice = hexLattice(n)\n",
+    "circles = [CircleE2(v.data, gridSize / 2) for v in lattice.verts]\n",
+    "\n",
+    "viewer.addAll(lattice.edges)\n",
+    "sty = makeStyle(stroke=\"#000\", strokeWeight=0.5)\n",
+    "greenStroke = makeStyle(stroke=\"#0f0\", strokeWeight=1)\n",
+    "for e in lattice.edges:\n",
+    "    if (e.aDart.face == e.dcel.outerFace \n",
+    "        or e.aDart.twin.face == e.dcel.outerFace):\n",
+    "        viewer.setStyle(e, greenStroke)\n",
+    "    else:\n",
+    "        viewer.setStyle(e, sty)\n",
+    "\n",
+    "viewer.addAll(polygonSegs)\n",
+    "darkSty = makeStyle(stroke=\"#f00\", strokeWeight=2)\n",
+    "for e in polygonSegs:\n",
+    "    viewer.setStyle(e, darkSty)\n",
+    "\n",
+    "\n",
+    "viewer.addAll(lattice.verts)\n",
+    "redFill = makeStyle(fill=\"#f00\")\n",
+    "for v in [v for v in lattice.verts if polygon.contains(v.data)]:\n",
+    "    viewer.setStyle(v, redFill)\n",
+    "\n",
+    "viewer.addAll(circles)\n",
+    "redStroke = makeStyle(stroke=\"#f00\", strokeWeight = 1)\n",
+    "for c in circles:\n",
+    "    if min([seg.distSqTo(c.center)\n",
+    "            for seg in polygon.segments()]) < c.radius * c.radius:\n",
+    "        viewer.setStyle(c, redStroke)\n",
+    "\n",
     "viewer.show()"
    ]
   },
