--- a/ChairTiling.ipynb
+++ b/ChairTiling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +92,19 @@
     "    for face in tuple(tiling.faces):\n",
     "        if face != tiling.outerFace:\n",
     "            face.starTriangulate()\n",
-    "\n",
-    "for _ in range(4):\n",
-    "    starTriangulateAllFaces()"
+    "        \n",
+    "for e in tiling.edges:\n",
+    "    e.level = 0\n",
+    "for i in range(4):\n",
+    "    edgeCount = len(tiling.edges)\n",
+    "    starTriangulateAllFaces()\n",
+    "    for e in tiling.edges[edgeCount:]:\n",
+    "        e.level = i+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +353,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ebf14ed780f4f16a41f00616e6c047b",
+       "model_id": "1a5b08f415a940b3bf585a679e5a3298",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c6fb70b352f421bbf9d9f9542823439",
+       "model_id": "c4f9f8f9ba4a49939546709bfafc8eb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -624,9 +629,20 @@
     "                      PointE2(e.aDart.dest.data.center.coord.real, e.aDart.dest.data.center.coord.imag))\n",
     "           for e in packing.edges]\n",
     "viewer.addAll(edgeSegs)\n",
-    "edgeStyle = makeStyle(stroke = \"#96f\", strokeWeight=1.0)\n",
-    "for e in edgeSegs:\n",
-    "    viewer.setStyle(e, edgeStyle)\n",
+    "blue = makeStyle(stroke = \"#79f\", strokeWeight=1.0)\n",
+    "red = makeStyle(stroke = \"#f97\", strokeWeight=1.0)\n",
+    "green = makeStyle(stroke = \"#7f9\", strokeWeight=1.0)\n",
+    "gray = makeStyle(stroke = \"#999\", strokeWeight=1.0)\n",
+    "for i in range(len(edgeSegs)):\n",
+    "    e = edgeSegs[i]\n",
+    "    if tiling.edges[i].level % 4 == 0:\n",
+    "        viewer.setStyle(e, blue)\n",
+    "    elif tiling.edges[i].level % 4 == 1:\n",
+    "        viewer.setStyle(e, red)\n",
+    "    elif tiling.edges[i].level % 4 == 2:\n",
+    "        viewer.setStyle(e, green)\n",
+    "    else:\n",
+    "        viewer.setStyle(e, gray)\n",
     "viewer.show()"
    ]
   },
