Working on the chair tiling code and added some to the DCEL as a result. Also made a few bug fixes in some koebe.geometries files.

--- a/ChairTiling.ipynb
+++ b/ChairTiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,100 +11,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "dart1 splitrule: ('A', 'B') to a to form AaB\n",
+      "1\n",
+      "('A', 'a')\n",
+      "('a', 'B')\n",
+      "dart1 splitrule: ('B', 'C') to b to form BbC\n",
+      "1\n",
+      "('B', 'b')\n",
+      "('b', 'C')\n",
+      "dart1 splitrule: ('C', 'D') to c to form CcD\n",
+      "1\n",
+      "('C', 'c')\n",
+      "('c', 'D')\n",
+      "dart1 splitrule: ('D', 'E') to d to form DdE\n",
+      "1\n",
+      "('D', 'd')\n",
+      "('d', 'E')\n",
+      "dart1 splitrule: ('E', 'F') to e to form EeF\n",
+      "1\n",
+      "('E', 'e')\n",
+      "('e', 'F')\n",
+      "dart1 splitrule: ('F', 'G') to f to form FfG\n",
+      "1\n",
+      "('F', 'f')\n",
+      "('f', 'G')\n",
+      "dart1 splitrule: ('G', 'H') to g to form GgH\n",
+      "1\n",
+      "('G', 'g')\n",
+      "('g', 'H')\n",
+      "dart1 splitrule: ('H', 'A') to h to form HhA\n",
+      "1\n",
+      "('H', 'h')\n",
+      "('h', 'A')\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Dart' object has no attribute 'splitRule'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-50e3f215ae72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[0mtiling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaces\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtileType\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"chair\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtiling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaces\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m \u001b[0mtilingPass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrules\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtiling\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-32-50e3f215ae72>\u001b[0m in \u001b[0;36mtilingPass\u001b[0;34m(tileRules, tiling)\u001b[0m\n\u001b[1;32m    180\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtiling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m         vertNames1 = ((e.aDart.edgeName[0]) + e.aDart.splitRule + (e.aDart.edgeName[-1])\n\u001b[0;32m--> 182\u001b[0;31m                      if e.aDart.face != e.dcel.outerFace else None)\n\u001b[0m\u001b[1;32m    183\u001b[0m         vertNames2 = ((e.aDart.twin.edgeName[0]) + e.aDart.twin.splitRule + (e.aDart.twin.edgeName[-1])\n\u001b[1;32m    184\u001b[0m                      if e.aDart.twin.face != e.dcel.outerFace else None)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Dart' object has no attribute 'splitRule'"
+     ]
+    }
+   ],
    "source": [
-    "tiling = DCEL()\n",
+    "tiling = DCEL.generateCycle(vdata = [\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\"])\n",
+    "print(len(tiling.faces))\n",
+    "tile = tiling.faces[-1]\n",
+    "tile.tileType = \"chair\"\n",
+    "#tile.starTriangulate(vdata = \"z\")\n",
     "\n",
-    "A, B, C, D, E, F, G, H = [Vertex(dcel = tiling, data = c) for c in \"ABCDEFGH\"]\n",
+    "class TilingRules:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.prototiles = {}\n",
+    "    \n",
+    "    def createPrototile(self, tileType, tileVerts):\n",
+    "        self.prototiles[tileType] = Prototile(self, tileType, tileVerts)\n",
+    "        return self.prototiles[tileType]\n",
+    "    \n",
+    "    def getPrototile(self, tileType):\n",
+    "        return self.prototiles[tileType]\n",
+    "    \n",
+    "    def createInitialTile(self, tileType):\n",
+    "        prototile = self.getPrototile(tileType).tileVerts\n",
+    "        tiling    = DCEL.generateCycle(prototile.tileVerts)\n",
+    "        tiling.edgeStack = []\n",
+    "        tiling.dartStack = []\n",
+    "        tiling.faceStack = []\n",
+    "        tiling.faces[1].tileType = tileType\n",
+    "        tiling.tilingLevel = 1\n",
+    "        return tiling\n",
+    "    \n",
+    "class Prototile:\n",
+    "    \n",
+    "    def __init__(self, tilingRules: TilingRules, tileType: str, tileVerts: str):\n",
+    "        \"\"\"\n",
+    "        Args: \n",
+    "            tilingRules: The TilingRules object that this prototile is a part of. \n",
+    "            tileVerts: The name of the vertices. For example, \"ABCDEF\" is a \n",
+    "                six sided tile with vertex names A, B, C, D, E, and F. \n",
+    "        \"\"\"\n",
+    "        self.tilingRules  = tilingRules\n",
+    "        self.tileType     = tileType\n",
+    "        self.tileVerts    = tileVerts\n",
+    "        self.splitRules   = dict()\n",
+    "        self.newVertRules = list()\n",
+    "        self.subtiles     = list()\n",
+    "    \n",
+    "    def addSplitEdgeRule(self, edge, newverts):\n",
+    "        \"\"\"\n",
+    "        Adds a rule to split an edge by introducing a series of new verts. For example\n",
+    "        if edge is \"AB\" and newverts is \"a\" this command will split the edge AB into\n",
+    "        Aa and aB. If newverts is \"abc\" then AB is split into Aa ab bc and cB. \n",
+    "        Args:\n",
+    "            self\n",
+    "            edge: The name of the edge to split, like \"AB\"\n",
+    "            newverts: The new vertices to introduce, like \"a\". \n",
+    "        \"\"\"\n",
+    "        self.splitRules[edge] = newverts\n",
+    "    \n",
+    "    def addSplitEdgeRules(self, splitCommands):\n",
+    "        \"\"\"\n",
+    "        Args: \n",
+    "            self\n",
+    "            splitCommands: A list of tuples of the form (edge, newverts) that directs\n",
+    "                the tiling to split this edge by introducing a series of new vertices. \n",
+    "                For example, (\"AB\", \"a\") would split the edge AB into two edges Aa and \n",
+    "                aB. \n",
+    "        \"\"\"\n",
+    "        for edge, newverts in splitCommands: \n",
+    "            self.addSplitEdgeRule(edge, newverts)\n",
+    "    \n",
+    "    def addNewVertexRule(self, vertName):\n",
+    "        self.newVertRules.append(vertName)\n",
+    "    \n",
+    "    def addNewVertexRules(self, vertNames):\n",
+    "        for vertName in vertNames:\n",
+    "            self.addNewVertexRule(vertName)\n",
+    "    \n",
+    "    def addSubtile(self, subtileType, subtileVerts):\n",
+    "        self.subtiles.append((subtileType, subtileVerts))\n",
+    "    \n",
+    "class PrototileFormationError(Exception):\n",
+    "    pass\n",
     "\n",
-    "tiling.outerFace = Face(dcel = tiling)\n",
+    "# The chair tiling only has one prototile\n",
+    "rules = TilingRules()\n",
+    "chair = rules.createPrototile(\"chair\", [\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\"])\n",
     "\n",
-    "# Create the tile face\n",
-    "tile = Face(dcel = tiling)\n",
+    "# Edges that need to be split\n",
+    "chair.addSplitEdgeRules((((\"A\",\"B\"), \"a\"), ((\"B\",\"C\"), \"b\"), ((\"C\",\"D\"), \"c\"),\n",
+    "                        ((\"D\",\"E\"), \"d\"), ((\"E\",\"F\"), \"e\"), ((\"F\",\"G\"), \"f\"),\n",
+    "                        ((\"G\",\"H\"), \"g\"), ((\"H\",\"A\"), \"h\")))\n",
     "\n",
-    "# Create the darts around the tile\n",
-    "AB = Dart(dcel = tiling, origin = A, face = tile)\n",
-    "BC = Dart(dcel = tiling, origin = B, face = tile)\n",
-    "CD = Dart(dcel = tiling, origin = C, face = tile)\n",
-    "DE = Dart(dcel = tiling, origin = D, face = tile)\n",
-    "EF = Dart(dcel = tiling, origin = E, face = tile)\n",
-    "FG = Dart(dcel = tiling, origin = F, face = tile)\n",
-    "GH = Dart(dcel = tiling, origin = G, face = tile)\n",
-    "HA = Dart(dcel = tiling, origin = H, face = tile)\n",
+    "# New vertices to create\n",
+    "chair.addNewVertexRules((\"i\",\"j\",\"k\",\"l\",\"m\"))\n",
     "\n",
-    "# Chain the next/prev pointers\n",
-    "AB.makeNext(BC)\n",
-    "BC.makeNext(CD)\n",
-    "CD.makeNext(DE)\n",
-    "DE.makeNext(EF)\n",
-    "EF.makeNext(FG)\n",
-    "FG.makeNext(GH)\n",
-    "GH.makeNext(HA)\n",
-    "HA.makeNext(AB)\n",
+    "# The subdivision subtiles: \n",
+    "chair.addSubtile(\"chair\", (\"A\",\"h\",\"H\",\"l\",\"k\",\"j\",\"B\",\"a\"))\n",
+    "chair.addSubtile(\"chair\", (\"G\",\"f\",\"F\",\"e\",\"m\",\"l\",\"H\",\"g\"))\n",
+    "chair.addSubtile(\"chair\", (\"k\",\"l\",\"m\",\"e\",\"E\",\"d\",\"i\",\"j\"))\n",
+    "chair.addSubtile(\"chair\", (\"C\",\"b\",\"B\",\"j\",\"i\",\"d\",\"D\",\"c\"))\n",
     "\n",
-    "# Create the outer face's darts\n",
-    "AH = Dart(dcel = tiling, origin = A, face = tiling.outerFace)\n",
-    "HG = Dart(dcel = tiling, origin = H, face = tiling.outerFace)\n",
-    "GF = Dart(dcel = tiling, origin = G, face = tiling.outerFace)\n",
-    "FE = Dart(dcel = tiling, origin = F, face = tiling.outerFace)\n",
-    "ED = Dart(dcel = tiling, origin = E, face = tiling.outerFace)\n",
-    "DC = Dart(dcel = tiling, origin = D, face = tiling.outerFace)\n",
-    "CB = Dart(dcel = tiling, origin = C, face = tiling.outerFace)\n",
-    "BA = Dart(dcel = tiling, origin = B, face = tiling.outerFace)\n",
     "\n",
-    "# Chain the next/prev pointers\n",
-    "AH.makeNext(HG)\n",
-    "HG.makeNext(GF)\n",
-    "GF.makeNext(FE)\n",
-    "FE.makeNext(ED)\n",
-    "ED.makeNext(DC)\n",
-    "DC.makeNext(CB)\n",
-    "CB.makeNext(BA)\n",
-    "BA.makeNext(AH)\n",
+    "def tilingPass(tileRules, tiling):\n",
+    "    \n",
+    "    tiles = [tile for tile in tiling.faces if tile != tiling.outerFace]\n",
+    "    \n",
+    "    # Annotate each tile with dictionaries to switch between \n",
+    "    # vertex names and darts within the tile and edge names and darts. \n",
+    "    for tile in tiles: \n",
+    "        prototile = tileRules.getPrototile(tile.tileType)\n",
+    "        theDarts  = tile.darts()\n",
+    "        \n",
+    "        if len(theDarts) != len(prototile.tileVerts):\n",
+    "            raise PrototileFormationError(\n",
+    "                    f\"Prototile vertex count ({len(theDarts)}) does not match tile\"\n",
+    "                    + f\" vertex count for tile type {tile.tileType}.\"\n",
+    "            )\n",
+    "        \n",
+    "        # Build a mapping from vertex names to darts originating at the vertex\n",
+    "        # and vice versa. \n",
+    "        tile.vertexToDart   = {}\n",
+    "        for i in range(len(theDarts)):\n",
+    "            vertexName = prototile.tileVerts[i]\n",
+    "            tile.vertexToDart[vertexName] = theDarts[i]\n",
+    "            theDarts[i].originName = vertexName\n",
+    "        \n",
+    "        tile.edgeNameToDart = {}\n",
+    "        for dart in theDarts:\n",
+    "            name = (dart.originName, dart.next.originName)\n",
+    "            tile.edgeNameToDart[name] = dart\n",
+    "            dart.edgeName = name    \n",
+    "            \n",
+    "    # For each tile, annotate any edge that needs to be split with its split rules. \n",
+    "    for tile in tiles: \n",
+    "        prototile = tileRules.getPrototile(tile.tileType)\n",
+    "        theDarts  = tile.darts()\n",
+    "        for dart in theDarts:\n",
+    "            if dart.edgeName in prototile.splitRules:\n",
+    "                dart.splitRule = prototile.splitRules[dart.edgeName]\n",
+    "            else:\n",
+    "                dart.splitRule = \"\"\n",
+    "    \n",
+    "    def annotateAndCheckEdge(edge):\n",
+    "        dart1, dart2 = edge.darts()\n",
+    "        if dart1.face == edge.dcel.outerFace:\n",
+    "            edge.newVertexCount = len(dart2.splitRule)\n",
+    "        elif dart2.face == edge.dcel.outerFace:\n",
+    "            edge.newVertexCount = len(dart1.splitRule)\n",
+    "        elif len(dart1.splitRule) == len(dart2.splitRule):\n",
+    "            edge.newVertexCount = len(dart2.splitRule)\n",
+    "        else:\n",
+    "            edge.newVertexCount = None\n",
+    "        return edge.newVertexCount != None\n",
+    "    \n",
+    "    def raiseEdgeError(edge):\n",
+    "        dart1, dart2 = edge.darts()\n",
+    "        tileName1 = dart1.face.tileType\n",
+    "        tileName2 = dart2.face.tileType\n",
+    "        splitCount1 = len(dart1.splitRule) + 1\n",
+    "        splitCount2 = len(dart2.splitRule) + 1\n",
+    "        \n",
+    "        raise PrototileFormationError(\n",
+    "                \"Edge subdivision cannot be performed because \"\n",
+    "                + f\"edge {dart1.edgeName} of tile {tileName1}\"\n",
+    "                + f\" has to split into {splitCount1} edges\"\n",
+    "                + \" but is matched with \"\n",
+    "                + f\"edge {dart2.edgeName} of tile {tileName2},\" \n",
+    "                + f\" which has to split into {splitCount2} edges\"\n",
+    "        )\n",
+    "    \n",
+    "    # Check that each edge compiles:\n",
+    "    for edge in tiling.edges:\n",
+    "        if not annotateAndCheckEdge(edge):\n",
+    "            raiseEdgeError(edge)\n",
+    "    \n",
+    "    # Now we need to actually split each edge introducing new vertices\n",
+    "    # then add the new edges and stitch the tiles up. \n",
+    "    newEdges = []\n",
+    "    newDarts = []\n",
+    "    newFaces = []\n",
     "\n",
-    "# Set the twins\n",
-    "AB.makeTwin(BA)\n",
-    "BC.makeTwin(CB)\n",
-    "CD.makeTwin(DC)\n",
-    "DE.makeTwin(ED)\n",
-    "EF.makeTwin(FE)\n",
-    "FG.makeTwin(GF)\n",
-    "GH.makeTwin(HG)\n",
-    "HA.makeTwin(AH)\n",
+    "    for e in tiling.edges:\n",
+    "        vertNames1 = ((e.aDart.edgeName[0]) + e.aDart.splitRule + (e.aDart.edgeName[-1])\n",
+    "                     if e.aDart.face != e.dcel.outerFace else None)\n",
+    "        vertNames2 = ((e.aDart.twin.edgeName[0]) + e.aDart.twin.splitRule + (e.aDart.twin.edgeName[-1])\n",
+    "                     if e.aDart.twin.face != e.dcel.outerFace else None)\n",
+    "        print(f\"dart1 splitrule: {e.aDart.edgeName} to {e.aDart.splitRule} to form {vertNames1}\")\n",
+    "        print(e.newVertexCount)\n",
+    "        \n",
+    "        nVerts = [Vertex(e.dcel) for _ in range(e.newVertexCount)]\n",
+    "        nDarts1 = ([Dart(e.dcel, origin = e.aDart.origin)] \n",
+    "                   + [Dart(e.dcel, origin = v) for v in nVerts])\n",
+    "        nDarts2 = ([Dart(e.dcel, origin = e.aDart.dest)] \n",
+    "                   + [Dart(e.dcel, origin = v) for v in reversed(nVerts)])\n",
+    "        \n",
+    "        for i in range(len(nDarts1)):\n",
+    "            nDarts1[i].makeTwin(nDarts2[len(nDarts2) - 1 - i])\n",
+    "            newDarts.append(nDarts1[i])\n",
+    "            newDarts.append(nDarts2[i])\n",
+    "            newEdge = Edge(e.dcel, aDart = nDarts1[i])\n",
+    "            nDarts1[i].edge = newEdge\n",
+    "            nDarts2[i].edge = newEdge\n",
+    "        \n",
+    "        if vertNames1:\n",
+    "            for i in range(len(nDarts1)):\n",
+    "                nDarts1[i].edgeName = (vertNames1[i], vertNames1[i+1])\n",
+    "                print(nDarts1[i].edgeName)\n",
+    "                \n",
+    "        if vertNames2:\n",
+    "            for i in range(len(nDarts2)):\n",
+    "                nDarts2[i].edgeName = (vertNames2[i], vertNames2[i+1])\n",
+    "                \n",
+    "        e.aDart.children = nDarts1\n",
+    "        e.aDart.twin.children = nDarts2\n",
+    "    \n",
     "\n",
-    "tile.aDart = AB # set the corner\n",
-    "\n",
-    "# Create edges\n",
-    "AB.createEdge()\n",
-    "BC.createEdge()\n",
-    "CD.createEdge()\n",
-    "DE.createEdge()\n",
-    "EF.createEdge()\n",
-    "FG.createEdge()\n",
-    "GH.createEdge()\n",
-    "HA.createEdge()\n",
-    "\n",
-    "tile.starTriangulate(vdata = \"z\")\n",
     "\n",
     "def starTriangulateAllFaces():\n",
     "    for face in tuple(tiling.faces):\n",
     "        if face != tiling.outerFace:\n",
     "            face.starTriangulate()\n",
     "        \n",
-    "for e in tiling.edges:\n",
-    "    e.level = 0\n",
-    "for i in range(4):\n",
-    "    edgeCount = len(tiling.edges)\n",
-    "    starTriangulateAllFaces()\n",
-    "    for e in tiling.edges[edgeCount:]:\n",
-    "        e.level = i+1"
+    "# for e in tiling.edges:\n",
+    "#     e.level = 0\n",
+    "# for i in range(4):\n",
+    "#     edgeCount = len(tiling.edges)\n",
+    "#     starTriangulateAllFaces()\n",
+    "#     for e in tiling.edges[edgeCount:]:\n",
+    "#         e.level = i+1\n",
+    "\n",
+    "tiling.faces[1].tileType = \"chair\"\n",
+    "print(len(tiling.faces))\n",
+    "tilingPass(rules, tiling)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +552,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a5b08f415a940b3bf585a679e5a3298",
+       "model_id": "0d31442bd6b34d9bbc057cdfc0cb4117",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +809,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f9f8f9ba4a49939546709bfafc8eb6",
+       "model_id": "266f312c86db45fc8f20952009246087",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,6 +843,23 @@
     "    else:\n",
     "        viewer.setStyle(e, gray)\n",
     "viewer.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "329\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(tiling.verts))"
    ]
   },
   {
