Updates to a few of the ipynb examples, and also updated the viewer to support animations.

--- a/ChairTiling.ipynb
+++ b/ChairTiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,65 +11,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "2\n",
-      "dart1 splitrule: ('A', 'B') to a to form AaB\n",
-      "1\n",
-      "('A', 'a')\n",
-      "('a', 'B')\n",
-      "dart1 splitrule: ('B', 'C') to b to form BbC\n",
-      "1\n",
-      "('B', 'b')\n",
-      "('b', 'C')\n",
-      "dart1 splitrule: ('C', 'D') to c to form CcD\n",
-      "1\n",
-      "('C', 'c')\n",
-      "('c', 'D')\n",
-      "dart1 splitrule: ('D', 'E') to d to form DdE\n",
-      "1\n",
-      "('D', 'd')\n",
-      "('d', 'E')\n",
-      "dart1 splitrule: ('E', 'F') to e to form EeF\n",
-      "1\n",
-      "('E', 'e')\n",
-      "('e', 'F')\n",
-      "dart1 splitrule: ('F', 'G') to f to form FfG\n",
-      "1\n",
-      "('F', 'f')\n",
-      "('f', 'G')\n",
-      "dart1 splitrule: ('G', 'H') to g to form GgH\n",
-      "1\n",
-      "('G', 'g')\n",
-      "('g', 'H')\n",
-      "dart1 splitrule: ('H', 'A') to h to form HhA\n",
-      "1\n",
-      "('H', 'h')\n",
-      "('h', 'A')\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Dart' object has no attribute 'splitRule'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-50e3f215ae72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[0mtiling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaces\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtileType\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"chair\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtiling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaces\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m \u001b[0mtilingPass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrules\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtiling\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-32-50e3f215ae72>\u001b[0m in \u001b[0;36mtilingPass\u001b[0;34m(tileRules, tiling)\u001b[0m\n\u001b[1;32m    180\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtiling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m         vertNames1 = ((e.aDart.edgeName[0]) + e.aDart.splitRule + (e.aDart.edgeName[-1])\n\u001b[0;32m--> 182\u001b[0;31m                      if e.aDart.face != e.dcel.outerFace else None)\n\u001b[0m\u001b[1;32m    183\u001b[0m         vertNames2 = ((e.aDart.twin.edgeName[0]) + e.aDart.twin.splitRule + (e.aDart.twin.edgeName[-1])\n\u001b[1;32m    184\u001b[0m                      if e.aDart.twin.face != e.dcel.outerFace else None)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Dart' object has no attribute 'splitRule'"
+      "{'A': <koebe.datastructures.dcel.Vertex object at 0x10446f7b8>, 'a': <koebe.datastructures.dcel.Vertex object at 0x1044c2588>, 'B': <koebe.datastructures.dcel.Vertex object at 0x10446f828>, 'b': <koebe.datastructures.dcel.Vertex object at 0x1044c2550>, 'C': <koebe.datastructures.dcel.Vertex object at 0x10446f860>, 'c': <koebe.datastructures.dcel.Vertex object at 0x104499198>, 'D': <koebe.datastructures.dcel.Vertex object at 0x10446f898>, 'd': <koebe.datastructures.dcel.Vertex object at 0x104499470>, 'E': <koebe.datastructures.dcel.Vertex object at 0x10446f8d0>, 'e': <koebe.datastructures.dcel.Vertex object at 0x1044995f8>, 'F': <koebe.datastructures.dcel.Vertex object at 0x10446f908>, 'f': <koebe.datastructures.dcel.Vertex object at 0x104499780>, 'G': <koebe.datastructures.dcel.Vertex object at 0x10446f940>, 'g': <koebe.datastructures.dcel.Vertex object at 0x104499908>, 'H': <koebe.datastructures.dcel.Vertex object at 0x10446f978>, 'h': <koebe.datastructures.dcel.Vertex object at 0x104499a90>}\n"
      ]
     }
    ],
    "source": [
-    "tiling = DCEL.generateCycle(vdata = [\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\"])\n",
-    "print(len(tiling.faces))\n",
+    "class Tiling(DCEL):\n",
+    "    \n",
+    "    def __init__(self, outerFaceData = None):\n",
+    "        super().__init__(outerFaceData)\n",
+    "\n",
+    "        self.dartLevels = []\n",
+    "        self.edgeLevels = []\n",
+    "        self.faceLevels = []\n",
+    "        self.subdivisionLevel = 1\n",
+    "\n",
+    "    def addLevel(self):\n",
+    "        old_darts, old_edges, old_faces = self.darts, self.edges, self.faces\n",
+    "        \n",
+    "        self.dartLevels.append(self.darts)\n",
+    "        self.edgeLevels.append(self.edges)\n",
+    "        self.faceLevels.append(self.faces)\n",
+    "        \n",
+    "        self.darts = []\n",
+    "        self.edges = []\n",
+    "        self.faces = []\n",
+    "        \n",
+    "        self.subdivisionLevel += 1\n",
+    "        \n",
+    "        return old_darts, old_edges, old_faces\n",
+    "\n",
+    "        \n",
+    "tiling = Tiling.generateCycle(vdata = [\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\"])\n",
     "tile = tiling.faces[-1]\n",
     "tile.tileType = \"chair\"\n",
     "#tile.starTriangulate(vdata = \"z\")\n",
@@ -167,7 +149,7 @@
     "chair.addSubtile(\"chair\", (\"k\",\"l\",\"m\",\"e\",\"E\",\"d\",\"i\",\"j\"))\n",
     "chair.addSubtile(\"chair\", (\"C\",\"b\",\"B\",\"j\",\"i\",\"d\",\"D\",\"c\"))\n",
     "\n",
-    "\n",
+    "    \n",
     "def tilingPass(tileRules, tiling):\n",
     "    \n",
     "    tiles = [tile for tile in tiling.faces if tile != tiling.outerFace]\n",
@@ -184,22 +166,25 @@
     "                    + f\" vertex count for tile type {tile.tileType}.\"\n",
     "            )\n",
     "        \n",
+    "        tile.vertexByName = {}\n",
     "        # Build a mapping from vertex names to darts originating at the vertex\n",
     "        # and vice versa. \n",
-    "        tile.vertexToDart   = {}\n",
+    "#         tile.vertexToDart   = {}\n",
     "        for i in range(len(theDarts)):\n",
     "            vertexName = prototile.tileVerts[i]\n",
-    "            tile.vertexToDart[vertexName] = theDarts[i]\n",
+    "#             tile.vertexToDart[vertexName] = theDarts[i]\n",
     "            theDarts[i].originName = vertexName\n",
     "        \n",
     "        tile.edgeNameToDart = {}\n",
     "        for dart in theDarts:\n",
     "            name = (dart.originName, dart.next.originName)\n",
     "            tile.edgeNameToDart[name] = dart\n",
-    "            dart.edgeName = name    \n",
+    "            dart.edgeName = name\n",
+    "        \n",
+    "        tile.splitEdgeNameToDart = {}\n",
     "            \n",
     "    # For each tile, annotate any edge that needs to be split with its split rules. \n",
-    "    for tile in tiles: \n",
+    "    for tile in tiles:\n",
     "        prototile = tileRules.getPrototile(tile.tileType)\n",
     "        theDarts  = tile.darts()\n",
     "        for dart in theDarts:\n",
@@ -207,6 +192,8 @@
     "                dart.splitRule = prototile.splitRules[dart.edgeName]\n",
     "            else:\n",
     "                dart.splitRule = \"\"\n",
+    "    for dart in tiling.outerFace.darts():\n",
+    "        dart.splitRule = \"\"\n",
     "    \n",
     "    def annotateAndCheckEdge(edge):\n",
     "        dart1, dart2 = edge.darts()\n",
@@ -243,43 +230,101 @@
     "    \n",
     "    # Now we need to actually split each edge introducing new vertices\n",
     "    # then add the new edges and stitch the tiles up. \n",
-    "    newEdges = []\n",
-    "    newDarts = []\n",
-    "    newFaces = []\n",
     "\n",
-    "    for e in tiling.edges:\n",
-    "        vertNames1 = ((e.aDart.edgeName[0]) + e.aDart.splitRule + (e.aDart.edgeName[-1])\n",
-    "                     if e.aDart.face != e.dcel.outerFace else None)\n",
-    "        vertNames2 = ((e.aDart.twin.edgeName[0]) + e.aDart.twin.splitRule + (e.aDart.twin.edgeName[-1])\n",
-    "                     if e.aDart.twin.face != e.dcel.outerFace else None)\n",
-    "        print(f\"dart1 splitrule: {e.aDart.edgeName} to {e.aDart.splitRule} to form {vertNames1}\")\n",
-    "        print(e.newVertexCount)\n",
+    "    def getSplitVertexNames(dart):\n",
+    "        \"\"\" For each dart get the vertex names for the split. For example\n",
+    "            if we're splitting a dart representing AB in a tiling by introducing\n",
+    "            a single vertex named a, then getSplitVertexNames will return (\"A\", \"a\", \"B\")\n",
+    "            as a tuple.\n",
+    "            \n",
+    "            Args: \n",
+    "            dart: The dart that needs to be split. \n",
+    "            \n",
+    "            Returns:\n",
+    "            A tuple containing the vertex names for the split version of the dart.\n",
+    "        \"\"\"\n",
+    "        if dart.face != dart.dcel.outerFace:\n",
+    "            split_vertex_names = (dart.edgeName[0]) + dart.splitRule + (dart.edgeName[-1])\n",
+    "#             print(f\"dart splitRule: {dart.edgeName} to {dart.splitRule} to form {split_vertex_names}\")\n",
+    "        else:\n",
+    "            split_vertex_names = None\n",
+    "        return split_vertex_names\n",
+    "    \n",
+    "    def setVertexAndEdgeNames(dartList, vertexNames, parentTile, lastVertex):\n",
+    "        if vertexNames != None:\n",
+    "            for i in range(len(dartList)):\n",
+    "                d = dartList[i]\n",
+    "                d.edgeName = (vertexNames[i], vertexNames[i+1])\n",
+    "                if parentTile != d.dcel.outerFace:\n",
+    "                    parentTile.vertexByName[vertexNames[i]] = d.origin \n",
+    "                    parentTile.splitEdgeNameToDart[d.edgeName] = d\n",
+    "            if parentTile != d.dcel.outerFace:\n",
+    "                parentTile.vertexByName[vertexNames[-1]] = lastVertex\n",
+    "    \n",
+    "    old_darts, old_edges, old_faces = tiling.addLevel() # Push all the current level info onto the various stacks and reset for new one. \n",
+    "    \n",
+    "    # Split all edges/darts according to their split rules and store a mapping from new split dart names\n",
+    "    # to Dart objects in the corresponding tile. \n",
+    "    for e in old_edges:\n",
     "        \n",
-    "        nVerts = [Vertex(e.dcel) for _ in range(e.newVertexCount)]\n",
+    "        # For each dart get the vertex names for the split. For example\n",
+    "        # if we're splitting a dart representing AB in a tiling by introducing\n",
+    "        # a single vertex named a, then getSplitVertexNames will return (\"A\", \"a\", \"B\")\n",
+    "        # as a tuple. \n",
+    "        vertNames1 = getSplitVertexNames(e.aDart)\n",
+    "        vertNames2 = getSplitVertexNames(e.aDart.twin)\n",
+    "        \n",
+    "        # Create the new vertices along the edge and the new darts. \n",
+    "        newVerts = [Vertex(e.dcel) for _ in range(e.newVertexCount)]  \n",
+    "        \n",
     "        nDarts1 = ([Dart(e.dcel, origin = e.aDart.origin)] \n",
-    "                   + [Dart(e.dcel, origin = v) for v in nVerts])\n",
-    "        nDarts2 = ([Dart(e.dcel, origin = e.aDart.dest)] \n",
-    "                   + [Dart(e.dcel, origin = v) for v in reversed(nVerts)])\n",
+    "                   + [Dart(e.dcel, origin = v) for v in newVerts])\n",
     "        \n",
+    "        nDarts2 = ([Dart(e.dcel, origin = e.aDart.dest)] \n",
+    "                   + [Dart(e.dcel, origin = v) for v in reversed(newVerts)])\n",
+    "        \n",
+    "        setVertexAndEdgeNames(nDarts1, vertNames1, e.aDart.face, e.aDart.dest)\n",
+    "        setVertexAndEdgeNames(nDarts2, vertNames2, e.aDart.twin.face, e.aDart.origin)\n",
+    "        \n",
+    "        e.aDart.childDarts = nDarts1\n",
+    "        e.aDart.twin.childDarts = nDarts2\n",
+    "        \n",
+    "        e.childEdges = []\n",
     "        for i in range(len(nDarts1)):\n",
     "            nDarts1[i].makeTwin(nDarts2[len(nDarts2) - 1 - i])\n",
-    "            newDarts.append(nDarts1[i])\n",
-    "            newDarts.append(nDarts2[i])\n",
     "            newEdge = Edge(e.dcel, aDart = nDarts1[i])\n",
+    "            e.childEdges.append(newEdge)\n",
     "            nDarts1[i].edge = newEdge\n",
     "            nDarts2[i].edge = newEdge\n",
+    "    \n",
+    "    # Split all tiles\n",
+    "    for tile in tiles:\n",
+    "        # Create any new vertices not obtained via splitting\n",
+    "        # and add them to the vertexByName map. \n",
     "        \n",
-    "        if vertNames1:\n",
-    "            for i in range(len(nDarts1)):\n",
-    "                nDarts1[i].edgeName = (vertNames1[i], vertNames1[i+1])\n",
-    "                print(nDarts1[i].edgeName)\n",
+    "        # Create a new face for each subtile getting either a dart\n",
+    "        # created in the edge split pass or creating a brand new dart\n",
+    "        \n",
+    "        # Loop over all the darts and find any that do not have a twin\n",
+    "        # for any that do not have a twin, set their twin correctly and\n",
+    "        # create an Edge between them\n",
+    "        \n",
+    "        pass\n",
+    "    print(tile.vertexByName)\n",
+    "        \n",
+    "    # Stitch up the outer face's boundary\n",
+    "        \n",
+    "#         if vertNames1:\n",
+    "#             for i in range(len(nDarts1)):\n",
+    "#                 nDarts1[i].edgeName = (vertNames1[i], vertNames1[i+1])\n",
     "                \n",
-    "        if vertNames2:\n",
-    "            for i in range(len(nDarts2)):\n",
-    "                nDarts2[i].edgeName = (vertNames2[i], vertNames2[i+1])\n",
+    "#         if vertNames2:\n",
+    "#             for i in range(len(nDarts2)):\n",
+    "#                 nDarts2[i].edgeName = (vertNames2[i], vertNames2[i+1])\n",
     "                \n",
-    "        e.aDart.children = nDarts1\n",
-    "        e.aDart.twin.children = nDarts2\n",
+    "                \n",
+    "#         e.aDart.children = nDarts1\n",
+    "#         e.aDart.twin.children = nDarts2\n",
     "    \n",
     "\n",
     "\n",
@@ -296,8 +341,8 @@
     "#     for e in tiling.edges[edgeCount:]:\n",
     "#         e.level = i+1\n",
     "\n",
+    "\n",
     "tiling.faces[1].tileType = \"chair\"\n",
-    "print(len(tiling.faces))\n",
     "tilingPass(rules, tiling)"
    ]
   },
